--- a/SportsStore/Views/_ViewImports.cshtml
+++ b/SportsStore/Views/_ViewImports.cshtml
@@ -2,4 +2,4 @@
 @using SportsStore.Models.ViewModels
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@addTagHelper *, SportsStore
+@addTagHelper *, SportsStore.Utility
